@@ -1,29 +1,44 @@
 package com.junioroffers.domain.offer;
 
-import com.junioroffers.domain.offer.dto.OfferResponseDto;
+import org.springframework.data.domain.Example;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.repository.query.FluentQuery;
 
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
-
-import static com.junioroffers.domain.offer.OfferMapper.mapOfferToOfferResponseDto;
+import java.util.function.Function;
+import java.util.stream.StreamSupport;
 
 public class InMemoryOfferRepository implements OfferRepository {
 
     Map<String, Offer> database = new ConcurrentHashMap<>();
 
     @Override
-    public Optional<Offer> findOfferById(String id) {
+    public boolean existsByOfferUrl(String offerUrl) {
+        long count = database.values()
+                .stream()
+                .filter(offer -> offer.offerUrl().equals(offerUrl))
+                .count();
+        return count == 1;
+    }
+
+    @Override
+    public Optional<Offer> findById(String id) {
         return Optional.ofNullable(database.get(id));
     }
 
     @Override
-    public Offer save(Offer entity) {
+    public boolean existsById(String s) {
+        return false;
+    }
+
+    @Override
+    public <S extends Offer> S save(S entity) {
         if (database.values().stream().anyMatch(offer -> offer.offerUrl().equals(entity.offerUrl()))) {
             throw new OfferDuplicateException(entity.offerUrl());
         }
@@ -35,40 +50,110 @@ public class InMemoryOfferRepository implements OfferRepository {
                 entity.salary(),
                 entity.offerUrl()
         );
-        database.put(offer.id(),offer);
-        return offer;
+        database.put(id.toString(), offer);
+        return (S) offer;
+    }
+
+
+    @Override
+    public <S extends Offer> List<S> saveAll(Iterable<S> entities) {
+        return StreamSupport.stream(entities.spliterator(), false)
+                .map(this::save)
+                .toList();
     }
 
     @Override
-    public List<OfferResponseDto> findAllOffers() {
-
-        return database.values()
-                .stream()
-               // .filter(ticket -> ticket.drawDate().isEqual(drawDate))
-                .map(OfferMapper::mapOfferToOfferResponseDto)
-                .collect(Collectors.toList());
+    public List<Offer> findAll() {
+        return database.values().stream().toList();
     }
 
     @Override
-    public boolean isUrlDuplicated(String offerUrl) {
-        long count = database.values()
-                .stream()
-                .filter(offer -> offer.offerUrl().equals(offerUrl))
-                .count();
-        return count == 1;
+    public Iterable<Offer> findAllById(Iterable<String> strings) {
+        return null;
     }
 
     @Override
-    public List<Offer> saveAll(List<Offer> offers) {
-
-//        return offers.stream()
-//                .map(this::save)    //nie czaje jak to dziala
-//                .toList();
-
-        offers.stream()
-                .map(offer -> database.put((offer.id()), offer));
-//                .collect(Collectors.toList());  //nie wiem czemu to nie dziala
-        return offers;
+    public long count() {
+        return 0;
     }
 
+    @Override
+    public void deleteById(String s) {
+
+    }
+
+    @Override
+    public void delete(Offer entity) {
+
+    }
+
+    @Override
+    public void deleteAllById(Iterable<? extends String> strings) {
+
+    }
+
+    @Override
+    public void deleteAll(Iterable<? extends Offer> entities) {
+
+    }
+
+    @Override
+    public void deleteAll() {
+
+    }
+
+    @Override
+    public List<Offer> findAll(Sort sort) {
+        return null;
+    }
+
+    @Override
+    public Page<Offer> findAll(Pageable pageable) {
+        return null;
+    }
+
+    @Override
+    public <S extends Offer> S insert(S entity) {
+        return null;
+    }
+
+    @Override
+    public <S extends Offer> List<S> insert(Iterable<S> entities) {
+        return null;
+    }
+
+    @Override
+    public <S extends Offer> Optional<S> findOne(Example<S> example) {
+        return Optional.empty();
+    }
+
+    @Override
+    public <S extends Offer> List<S> findAll(Example<S> example) {
+        return null;
+    }
+
+    @Override
+    public <S extends Offer> List<S> findAll(Example<S> example, Sort sort) {
+        return null;
+    }
+
+    @Override
+    public <S extends Offer> Page<S> findAll(Example<S> example, Pageable pageable) {
+        return null;
+    }
+
+    @Override
+    public <S extends Offer> long count(Example<S> example) {
+        return 0;
+    }
+
+    @Override
+    public <S extends Offer> boolean exists(Example<S> example) {
+        return false;
+    }
+
+    @Override
+    public <S extends Offer, R> R findBy(Example<S> example, Function<FluentQuery.FetchableFluentQuery<S>, R> queryFunction) {
+        return null;
+    }
 }
